# moth

./: .gitignore  AGENTS.md  NOTICE.md  README.md  pyproject.toml
docs/: operating-model.md
profiles/: chunkymonkey.yaml  template.yaml
schemas/: moth.snapshot.schema.json
scripts/: moth
src/moth/: __init__.py  cli.py  gates.py  report.py  schema.py  snapshot.py  takeover.py  takeover_scaffold.py  workspace.py
src/moth/adapters/: __init__.py  codegraph.py  complexity.py
src/moth/checks/: __init__.py  assertions.py  coupling.py  dirty_worktree.py  import_cycles.py  startup.py
src/moth/profiles/: __init__.py  loader.py  scaffold.py
tests/: test_assertions.py  test_checks.py  test_cli.py  test_codegraph_adapter.py  test_complexity_adapter.py  test_coupling.py  test_import_cycles.py  test_profiles.py  test_report.py  test_takeover_gates.py  test_workspace.py
