[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moth"
version = "0.2.0"
description = "Cross-repo audit atlas for architecture, governance, and startup readiness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0.1"]

[project.optional-dependencies]
# duckdb_sql 断言类型用; 不装时该类型 fail-closed 报清晰错误 (checks/assertions.py)
assertions = ["duckdb>=1.0.0"]

[project.scripts]
moth = "moth.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
